# presences-service

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  test.sh
src/: main.rs
